# rust_practice

./: Cargo.toml  README.md
src/: main.rs
