[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
awc = { version = "3.1.1", features = ["rustls"] }
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
